- Partials   * added data to get bill
- Fixtures
  * fixed

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -19,7 +19,7 @@
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'cd', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'cd', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
   <p>
