--- a/app/views/dvds/_form.html.erb
+++ b/app/views/dvds/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'dvd', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'dvd', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
