--- a/app/views/screens/_form.html.erb
+++ b/app/views/screens/_form.html.erb
@@ -24,7 +24,7 @@ t('help-phrases.in-workstation'))%>
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'screen', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'screen', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
