- Layout   * fixed to do not show menu partial if anyone is     logged in

--- a/app/views/layouts/primary-content.html.erb
+++ b/app/views/layouts/primary-content.html.erb
@@ -5,12 +5,14 @@
     <div id="outer">
 
       <% 3.times do %>
-        <br>
-      <% end %>
+      <br>
+        <% end %>
 
-      <%= render :partial => 'shared/menu' %>
+        <% if logged_in? %>
+        <%= render :partial => 'shared/menu' %>
+        <% end %>
 
-      <div id="content">
+        <div id="content">
           <%= yield  %>
 
           <div class="clear"></div>
