- Partials and views   * added field tags html of date
- Locales
  * new translation

- Migration
  * added data field in bills table

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -12,6 +12,10 @@
   <%= f.text_field :code %>
   <% end %>
 
+  <% content_tag :div, :id => 'quarter' do %>
+  <%= date_select('bill', 'date', :start_year => 1995, :order => [:day, :month, :year]) %>
+  <% end %>
+
   <% if action_name == 'new' %>
   <%= f.submit t('bill.create') %>
   <% else %>
