--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -6,6 +6,10 @@
   <!-- Bill code -->
   <%= content_tag('label', t('bill.code')) %>
   <%= content_tag('b', @bill.code) %>
+
+  <!-- Bill code -->
+  <%= content_tag('label', t('bill.date')) %>
+  <%= content_tag('b', @bill.date.strftime("%d/%m/%Y")) %>
 <% end %>
 
 
