- Module   * added new module page to make semi dynamic page to show in the     front end of the application
- Migration
  * added migration of pages

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -142,6 +142,20 @@
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
+
+
+
+      <li class="top">
+        <a href="#" id="telmex" class="top_link">
+          <span class="down">Pages</span>
+          <!--[if gte IE 7]><!--></a><!--<![endif]-->
+        <!--[if lte IE 6]><table><tr><td><![endif]-->
+        <ul class="sub">
+          <li><a href="/pages/">List Pages</a></li>
+          <li><a href="/pages/new">New Page</a></li>
+        </ul>
+        <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+      </li>
       <% end %>
 
       <li class="top">
