- Helper   * added new method for generate menu for statics pages
- Layout
  * added menu of states pages

- Views
  * little changes

--- a/app/views/layouts/primary-content.html.erb
+++ b/app/views/layouts/primary-content.html.erb
@@ -10,6 +10,8 @@
 
         <% if logged_in? %>
         <%= render :partial => 'shared/menu' %>
+        <% else %>
+        <%= front_end_pages %>
         <% end %>
 
         <div id="content">
