--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,21 +1,4 @@
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Permalink</th>
-    <th>Content</th>
-  </tr>
-
-<% for page in @pages %>
-  <tr>
-    <td><%=h page.name %></td>
-    <td><%=h page.permalink %></td>
-    <td><%=h page.content %></td>
-    <td><%= link_to 'Show', page %></td>
-    <td><%= link_to 'Edit', edit_page_path(page) %></td>
-    <td><%= link_to 'Destroy', page, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<%= render :partial => 'list' %>
 
 <br />
 
