- Controllers   * change layout to view in pages and  sessions controller to use     a special layout for the front end site
- Layouts
  * added new layout front-page
  * changes in primary-content to does not show
    the list of statics pages

- Helper
  * little changes to show the pages list

- Css
  * added new front page styles

--- a/app/views/layouts/front-page.html.erb
+++ b/app/views/layouts/front-page.html.erb
@@ -3,13 +3,13 @@
   <%= render :partial => 'shared/head' %>
   <body>
     <div id="outer">
-
-      <% 3.times do %>
-      <br>
-        <% end %>
-
         <% if logged_in? %>
-        <%= render :partial => 'shared/menu' %>
+          <%= render :partial => 'shared/menu' %>
+        <% else %>
+          <%= front_end_pages %>
+          <% 3.times do %>
+          <br>
+          <% end %>
         <% end %>
 
         <div id="content">
