--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,23 +1,25 @@
-<h1>New page</h1>
-
 <% form_for(@page) do |f| %>
-  <%= f.error_messages %>
+<%= f.error_messages %>
 
-  <p>
+  <% content_tag :p do %>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
-  </p>
-  <p>
+  <% end %>
+
+  <% content_tag :p do %>
     <%= f.label :permalink %><br />
     <%= f.text_field :permalink %>
-  </p>
-  <p>
+  <% end %>
+
+  <% content_tag :p do %>
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
-  </p>
-  <p>
+    <%= f.text_area :content, :cols => 80, :rows => 15 %>
+  <% end %>
+
+  <% content_tag :p do %>
     <%= f.submit "Create" %>
-  </p>
+  <% end %>
+
 <% end %>
 
 <%= link_to 'Back', pages_path %>
