- Controllers   * added paginate in bill controller   * added constant PER_PAGE in computers controller
- Models
  * adde nullify clause and a named scope to get the list of bills
    for each company

- Partials and Views
  * added new partials selector and list for company in bills module
  * adapted views to show this partials

- Layouts
  * changes in bill layout to show the partial to select companies

- Locales
  * added new translations for bill module

- Routes
  * added new route to bills module

--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -8,7 +8,8 @@
   <% for bill in @bills %>
   <tr>
     <%= content_tag('td', bill.code) %>
-    <%= content_tag('td', bill.company.name) rescue nil %>
+    <%= content_tag('td', link_to(bill.company.name, '/companies/' + bill.company.id.to_s) ) rescue nil %>
+
     <%= content_tag('td',link_to(t('common-actions.show'), bill)) %>
     <%= content_tag('td',link_to(t('common-actions.edit'), edit_bill_path(bill))) %>
     <%= content_tag('td',link_to(t('common-actions.destroy'), bill, :confirm => 'Are you sure?', :method => :delete)) %>
