- Controllers   * added pdf method and requirement libraries in bills controller   * added one more parameter option in pdf method of places controller
- Model
  * added validations

- Partials
  * little changes

- Routes
  * added route to match with pdf methods for bills

- Library
  * added methods to get pdf report of bills

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -12,7 +12,8 @@
   <%= f.text_field :code %>
   <% end %>
 
-  <% content_tag :div, :id => 'quarter' do %>
+  <% content_tag :div, :id => 'ten-percent' do %>
+  <%= t('bill.date') %>
   <%= date_select('bill', 'date', :start_year => 1995, :order => [:day, :month, :year]) %>
   <% end %>
 
