- Controller    * added xls method
- Partial
  * change in link to download xls report

- Routes
  * added xls route for bills module

- Library
  * added new bills_report method

--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -1,5 +1,5 @@
-<%= link_to t('common-actions.download'), :controller => 'places',
-:action => 'xls_places' %> |
+<%= link_to t('common-actions.download'), :controller => 'bills',
+:action => 'xls' %> |
 <%= link_to  t('common-actions.download-pdf'), :controller => 'bills',
 :action => 'pdf' %>
 
