- Partials   * added field inventory register data
- Locales
  * added translation of inventory register

- Migration
  * added new field inventory register in all devices

- Fixtures
  * added new values in inventory register field

--- a/app/views/computers/_computer_info.html.erb
+++ b/app/views/computers/_computer_info.html.erb
@@ -2,6 +2,9 @@
 <%= show_info(t('computers.name'), 'principal-device', 'Computer', @computer.id, 'name') %>
 <%= show_info('Ip', 'data-principal-device', 'Computer', @computer.id, 'ip') %>
 <%= show_info('Mac', 'data-principal-device', 'Computer', @computer.id, 'mac') %>
+<%= show_info(t('computers.inventory_register'), 'data-principal-device',
+    'Computer', @computer.id, 'inventory_register') %>
+
 
 
   <% content_tag :div, :id => 'data-principal-device' do %>
