--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <% cache(:fragment => "shared/_footer") do %>
 <div id="footer">
-  <p>Webmaster: <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a></p>
+  <p>Developer: <a href="http://www.cesardiaz.com.ar">Cesar Diaz</a></p>
 </div>
 <% end %>
