--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -1,27 +1,44 @@
+<!-- This file is part of Hardware Inventory. -->
+<!--     Copyright (C) 2009 Cesar Diaz -->
+<!--      Hardware Inventory is free software: you can redistribute it and/or modify -->
+<!--      it under the terms of the GNU General Public License as published by -->
+<!--      the Free Software Foundation, either version 3 of the License, or -->
+<!--      any later version. -->
+<!--      This program is distributed in the hope that it will be useful, -->
+<!--      but WITHOUT ANY WARRANTY; without even the implied warranty of -->
+<!--      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the -->
+<!--      GNU General Public License for more details. -->
+<!--      You should have received a copy of the GNU General Public License -->
+<!--      along with this program. If not, see <http://www.gnu.org/licenses/>. -->
+
 <% cache(:fragment => "computers/_search") do %>
 <%= javascript_include_tag :defaults %>
 
-<table>
-  <% form_tag :action => 'search' do %>
-  <tr>
-    <td><label><%= t 'computers.name' %></label></td>
-    <td><%= text_field_with_auto_complete :computer, :name, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag t 'search.label' %></td>
-    <% end %>
-  </tr>
-  <tr>
+<a href="#" onclick="Effect.toggle('toggle_search', 'appear'); return false;">
+  <%= t('common-actions.show-hide') %></a>
+<div id='toggle_search' style='border: solid 1px #eee;'  >
+  <table>
     <% form_tag :action => 'search' do %>
-    <td><label>Ip:</label></td>
-    <td><%= text_field_with_auto_complete :computer, :ip, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag t 'search.label' %></td>
+    <tr>
+      <td><label><%= t 'computers.name' %></label></td>
+      <td><%= text_field_with_auto_complete :computer, :name, {:size => 20}, {:method => :get} %></td>
+      <td><%= submit_tag t 'search.label' %></td>
+      <% end %>
+    </tr>
+    <tr>
+      <% form_tag :action => 'search' do %>
+      <td><label>Ip:</label></td>
+      <td><%= text_field_with_auto_complete :computer, :ip, {:size => 20}, {:method => :get} %></td>
+      <td><%= submit_tag t 'search.label' %></td>
+      <% end %>
+    </tr>
+    <tr>
+      <% form_tag :action => 'search' do %>
+      <td><label>Mac:</label></td>
+      <td><%= text_field_with_auto_complete :computer, :mac, {:size => 20}, {:method => :get} %></td>
+      <td><%= submit_tag t 'search.label' %></td>
+    </tr>
     <% end %>
-  </tr>
-  <tr>
-    <% form_tag :action => 'search' do %>
-    <td><label>Mac:</label></td>
-    <td><%= text_field_with_auto_complete :computer, :mac, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag t 'search.label' %></td>
-  </tr>
-  <% end %>
-</table>
+  </table>
+</div>
 <% end %>
