--- a/app/views/layouts/computers.html.erb
+++ b/app/views/layouts/computers.html.erb
@@ -6,29 +6,14 @@
 
       <%= render :partial => 'shared/menu' %>
 
-      <div id="content">
-        <%= render :partial => 'shared/primary_content' %>
-        <div id="secondaryContent">
-          <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
-             controller.action_name != 'new' && controller.action_name != 'create' \
-             && controller.action_name != 'stats' %>
-          <div class="box boxB">
-            <div class="boxContent">
-              <%= render :partial => 'search' %>
-            </div>
-          </div>
-          <% else %>
-          <div class="box boxB">
-            <div class="boxContent">
-              <h2><%= controller.controller_name %> : <%= controller.action_name %></h2>
-            </div>
-          </div>
-          <% end %>
-        </div>
+      <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
+         controller.action_name != 'new' && controller.action_name != 'create' \
+         && controller.action_name != 'stats' %>
+      <%= render :partial => 'search' %>
+      <% end %>
 
+        <%= yield  %>
 
-
-      </div>
       <div class="clear"></div>
       <%= render :partial => 'shared/footer' %>
 
