--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -13,6 +13,13 @@
 
     <% 2.times do %>
     <br>
+    <% end %>
+
+    <%= t('harddisks.inventory_register') %>
+    <%= f.text_field :inventory_register %>
+
+    <% 2.times do %>
+    <br>
     <%  end %>
 
   <%= f.label 'size' %>
