--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -7,6 +7,13 @@
   <%= t('motherboards.sn') %>
   <%= f.text_field :serialnumber %>
 
+    <% 2.times do %>
+    <br>
+    <% end %>
+
+    <%= t('motherboards.inventory_register') %>
+    <%= f.text_field :inventory_register %>
+
   <%= t('motherboards.computer') %>
 
   <div id="quarter" >
