--- a/app/views/layouts/printers.html.erb
+++ b/app/views/layouts/printers.html.erb
@@ -8,24 +8,12 @@
 
       <div id="content">
 
-        <%= render :partial => 'shared/primary_content' %>
-
-        <div id="secondaryContent">
           <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
              controller.action_name != 'new' && controller.action_name != 'create' %>
-          <div class="box boxB">
-            <div class="boxContent">
               <%= render :partial => 'search' %>
-            </div>
-          </div>
-          <% else %>
-          <div class="box boxB">
-            <div class="boxContent">
-              <h2><%= controller.controller_name %> : <%= controller.action_name %></h2>
-            </div>
-          </div>
           <% end %>
-        </div>
+
+        <%= yield %>
       </div>
       <div class="clear"></div>
 
