--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -1,24 +1,26 @@
-<table>
-  <tr>
-    <th><%= t('printers.model') %></th>
-    <th><%= t('printers.sn') %></th>
-    <th><%= t('printers.mark') %></th>
-    <th>Place</th>
-    <th><%= t('printers.workstation?') %></th>
-    <th><%= t('screens.bill') %></th>
+<% content_tag :table do %>
+  <% content_tag :tr do %>
+    <%= content_tag('th', t('printers.model')) %>
+    <%= content_tag('th', t('printers.sn')) %>
+    <%= content_tag('th', t('printers.mark')) %>
+    <%= content_tag('th', 'Place') %>
+    <%= content_tag('th', t('printers.workstation?')) %>
+    <%= content_tag('th', t('screens.bill')) %>
     <th colspan='3'><%= t('common-actions.actions') %></th>
-  </tr>
+    <% end %>
+
 <% for printer in @printers %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= printer.model %></td>
-    <td><%= printer.serialnumber %></td>
-    <td><%= printer.mark.name rescue nil  %></td>
-    <%= content_tag('td', link_to(printer.place.title, 'places/' + printer.place.id.to_s) ) rescue nil%>
-    <td><%= printer.is_part_of_a_workstation rescue nil %></td>
-    <td><%= link_to t('printers.bill'), 'bills/'+ printer.bill_id.to_s %></td>
-    <td><%= link_to t('common-actions.show'), printer %></td>
-    <td><%= link_to t('common-actions.edit'), edit_printer_path(printer) %></td>
-    <td><%= link_to t('common-actions.destroy'), printer, :confirm => 'Are you sure?', :method => :delete %></td>
+    <%= content_tag('td', printer.model) %>
+    <%= content_tag('td', printer.serialnumber) %>
+    <%= content_tag('td', printer.mark.name) rescue nil  %>
+    <%= content_tag('td', link_to(printer.place.title, 'places/' + printer.place.id.to_s)) rescue nil%>
+    <%= content_tag('td', printer.is_part_of_a_workstation) rescue nil %>
+    <%= content_tag('td', link_to( t('printers.bill'), 'bills/'+ printer.bill_id.to_s)) %>
+    <%= content_tag('td', link_to( t('common-actions.show'), printer)) %>
+    <%= content_tag('td', link_to( t('common-actions.edit'), edit_printer_path(printer))) %>
+    <%= content_tag('td', link_to(t('common-actions.destroy'), printer, :confirm => 'Are you sure?', :method => :delete)) %>
   </tr>
 <% end %>
-</table>
+<% end -%>
+
