--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -512,6 +512,38 @@ div.auto_complete ul strong.highlight {
 }
 
 
+/* Bills */
+
+#bill-description
+{
+    margin: 1em 1em 1em 1em;
+    color: #000;
+    background-color: #fff;
+    font-size: 14pt;
+    padding: 1px 1px 1px 100px;
+    display:block;
+    position:relative;
+    border: solid 1px #000;
+    float: right;
+}
+
+#bill-content
+{
+    margin: 1em 1em 1em 1em;
+    color: #000;
+    background-color: #fff;
+    font-size: 12pt;
+    padding: 1px 1px 1px 1px;
+    display:block;
+    position:relative;
+    width: 80%;
+    border-bottom: solid 1px #000;
+}
+
+#bill-content-decription
+{
+}
+
 /* Statics Pages */
 
 #title
