- Partials and view   * addapted to the new field in motherboards devices
- Migration
  * migration to change the name field title by model in
    motherboards table

- Fixtures
  * adapted info to load in rake task for development

--- a/app/views/computers/_computer_info.html.erb
+++ b/app/views/computers/_computer_info.html.erb
@@ -10,7 +10,7 @@
   <% content_tag :div, :id => 'data-principal-device' do %>
 
   <%= content_tag('th', 'Motherboard : ') %>
-                 <%= @computer.mother_board.title  rescue nil%>
+                 <%= @computer.mother_board.model  rescue nil%>
                  <%= content_tag('br') %>
 
   <%= content_tag('th', t('computers.harddisk')) %>
