--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -15,7 +15,7 @@
   <%= f.error_messages %>
 
   <%= t('motherboards.model') %>
-  <%= f.text_field :title %>
+  <%= f.text_field :model %>
 
   <%= t('motherboards.sn') %>
   <%= f.text_field :serialnumber %>
